ThreeP-9 New item edit by double click
Add CRUD components for Items and Trips, enhance item handling, and improve UI interactions

--- a/ThreeP/Modules/Common/Elements/MBox.razor
+++ b/ThreeP/Modules/Common/Elements/MBox.razor
@@ -1,5 +1,7 @@
 ﻿@namespace Mac.Modules.Elements
-<MudPaper Elevation="GlobalStyles.Elevation" Class="@($"{Class} pa-4")" Style="@Styles">
+
+
+<MudPaper Elevation="GlobalStyles.Elevation" Class="@ClassBuilder" Style="@StyleBuilder" @ondblclick="@(async _ => await OnDoubleClick.InvokeAsync())">
     <MudStack Row Justify="Justify.SpaceBetween">
         <MTitle Name="@Name" Color="@Color" Typo="Typo"/>
         <MudSpacer/>
@@ -19,6 +21,7 @@
 
 
 @code {
+[Parameter]public EventCallback OnDoubleClick { get; set; }
     [Parameter] public RenderFragment? HeaderRight { get; set; }
     [Parameter] public RenderFragment? ChildContent { get; set; }
     [Parameter] public bool ExpandedDisabled { get; set; }
@@ -26,6 +29,20 @@
     [Parameter] public Typo Typo { get; set; } = GlobalStyles.HeaderTypo;
     [Parameter] public Color Color { get; set; } = GlobalStyles.TextColor;
     [Parameter] public bool Expanded { get; set; }
+    [Parameter] public bool StickyTop { get; set; }
+    [Parameter] public string? StickyOffsetTop { get; set; } = "0";
     [Parameter] public string? Class { get; set; }
     [Parameter] public string? Styles { get; set; }
+    
+    string? ClassBuilder => new CssBuilder()
+        .AddClass(Class,  !string.IsNullOrWhiteSpace(Class))
+        .AddClass("pa-4")
+        // .AddClass("mud-appbar-fixed-top")
+        .Build();
+    
+    string? StyleBuilder => new StyleBuilder()
+        .AddStyle($"position: sticky; top:{StickyOffsetTop}; z-index:10", StickyTop)
+        .AddStyle(Styles, !string.IsNullOrWhiteSpace(Styles) )
+        .Build();
+
 }
