--- a/ThreeP/Components/Layout/MainLayout.razor
+++ b/ThreeP/Components/Layout/MainLayout.razor
@@ -14,11 +14,11 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start"
                        OnClick="DrawerToggle"/>
         @* LOGO *@
-        <Logo Text="3P" Typo="Typo.h6"  Color="Color.Warning" Style="width: 100px; "/>
-        
+        <Logo Text="3P" Typo="Typo.h6" Color="Color.Warning" Style="width: 100px; "/>
+
         @* SECTION LEFT *@
-<SectionOutlet SectionId="HeaderLeftSection"></SectionOutlet>
-        
+        <SectionOutlet SectionId="HeaderLeftSection"></SectionOutlet>
+
         <MudSpacer/>
 
         @* SECTION *@
@@ -53,7 +53,11 @@
         <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="mt-10">
             @Body
         </MudContainer>
+
     </MudMainContent>
+            <MudScrollToTop TopOffset="50" >
+                <MudFab Color="Color.Warning" StartIcon="@Icons.Material.Filled.ArrowUpward"/>
+            </MudScrollToTop>
 
 </MudLayout>
 
@@ -66,14 +70,14 @@
 
 @code{
     [CascadingParameter] public AppState AppState { get; set; }
-    public static object? HeaderRightSection  = new();
+    public static object? HeaderRightSection = new();
     public static object? HeaderLeftSection = new();
     bool drawerOpen = true;
 
     void DrawerToggle() => drawerOpen = !drawerOpen;
 
 
-    protected override async Task OnInitializedAsync()=> ProgressService.OnProgressChanged += StateHasChanged;
+    protected override async Task OnInitializedAsync() => ProgressService.OnProgressChanged += StateHasChanged;
 
 
     async Task DarkModeChanged(bool darkMode)
@@ -82,5 +86,6 @@
         await AppState.SaveSettings();
     }
 
-    public void Dispose()=>ProgressService.OnProgressChanged -= StateHasChanged;
+
+    public void Dispose() => ProgressService.OnProgressChanged -= StateHasChanged;
 }
