--- a/ThreeP/_Imports.razor
+++ b/ThreeP/_Imports.razor
@@ -40,6 +40,7 @@
 @using Mac.Modules.Pdf
 @using Mac.Modules.Progress
 @using Mac.Modules.BackArrow
+@using Mac.Modules.Crud
 
 @* MODULES *@
 @using ThreeP.Modules.Items
