--- a/ThreeP/Modules/Trips/Components/TripUpdate.razor
+++ b/ThreeP/Modules/Trips/Components/TripUpdate.razor
@@ -1,9 +1,9 @@
-﻿@namespace ThreeP.Modules.Trips
+﻿@*@namespace ThreeP.Modules.Trips
 @typeparam T where T : Trip, new()
 @inject SetService SetService
 
-@*<div style="text-align: end;">
-</div>*@
+$1$<div style="text-align: end;">
+</div>#1#
 <MBox Name="Dodaj/Edytuj" Expanded="expanded" ExpandedDisabled="true" StickyTop="true">
     <HeaderRight>
         <MudButton Disabled="addDisabled" Color="Color.Success" Variant="Variant.Filled" Size="Size.Medium"
@@ -20,13 +20,13 @@
 
             <MudSelect @bind-Value="Item?.SetId" Variant="Variant.Filled" Label="Wybierz Set"
                        Class="@GlobalStyles.MarginTop" Clearable>
-                @* <MudSelectItem Value="sets?.FirstOrDefault().Id">@sets?.FirstOrDefault()?.Name</MudSelectItem> *@
+                $1$ <MudSelectItem Value="sets?.FirstOrDefault().Id">@sets?.FirstOrDefault()?.Name</MudSelectItem> #1#
                 @foreach (var set in sets)
                 {
                     <MudSelectItem Value="set?.Id">@set?.Name</MudSelectItem>
                 }
             </MudSelect>
-            @* BUTTONS *@
+            $1$ BUTTONS #1#
             <MudStack Row Justify="Justify.FlexEnd" Class="@GlobalStyles.MarginTop">
                 <MudButton  Variant="Variant.Filled" Color="Color.Error" OnClick="Cancel" Class="me-3">Anuluj</MudButton>
                 <MudButton Disabled="@(!form.IsValid)" Variant="Variant.Filled" Color="Color.Success" OnClick="Ok">OK</MudButton>
@@ -99,4 +99,4 @@
         addDisabled = false;
         await form.ResetAsync();
     }
-}
+}*@
